services/k8s-rollout/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: k8s-rollout
spec:
  rules:
  - host: rollout.in.takutakahashi.dev
    http:
      paths:
      - backend:
          service:
            name: k8s-rollout
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - rollout.in.takutakahashi.dev
    secretName: tls-secret
